--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: hellofont;
+    src: url(./fonts/font.ttf);
+}
+*{
+    font-family: hellofont;
+    
+}
+.glassdiv{
+  
+    background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 10px );
+-webkit-backdrop-filter: blur( 5px );
+border-radius: 10px;
+}
