--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,6 @@ backdrop-filter: blur( 10px );
 -webkit-backdrop-filter: blur( 5px );
 border-radius: 10px;
 }
+::-webkit-scrollbar{
+    display: none;
+}
